--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@bassist/progress": "^0.2.2",
     "@bassist/utils": "^0.13.0",
+    "element-plus": "^2.4.2",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -43,7 +44,7 @@
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "unocss": "^0.56.4",
-    "unplugin-auto-import": "^0.16.6",
+    "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vite-plugin-banner": "^0.7.1",
