--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@bassist/utils": "^0.13.0",
     "element-plus": "^2.4.2",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
