--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
   "references": [
     { "path": "./tsconfig.node.json" },
     { "path": "./tsconfig.web.json" }
-  ]
+  ],
+  "types": ["element-plus/global"]
 }
